[metadata]
name = simplesat
version = file: VERSION
url = https://github.com/enthought/sat-solver
author = Enthought Inc.
author_email = info@enthought.com
description = Prototype for SAT-based dependency handling. This is a work in progress, do not expect any API not to change at this point.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
license_files = file: LICENSE.txt
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
packages =
    simplesat
    simplesat.constraints
    simplesat.constraints.tests
    simplesat.examples
    simplesat.sat
    simplesat.sat.policy
    simplesat.sat.tests
    simplesat.tests
    simplesat.test_data
    simplesat.utils
    simplesat.utils.tests
python_requires = >=3.6
install_requires =
    attrs >= 17.4.0
    okonomiyaki >= 0.16.6
    six >= 1.10.0

[options.package_data]
simplesat.tests = *.yaml
simplesat.test_data = indices/*.json
